<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="380dp"
    android:orientation="vertical"
    android:padding="24dp"
    android:elevation="8dp">

    <EditText
        android:id="@+id/etAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/amount_tran"
        android:inputType="numberDecimal"
        android:padding="12dp"
        android:background="@drawable/edittext_bg" />

    <EditText
        android:id="@+id/etCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/category_tran"
        android:padding="12dp"
        android:background="@drawable/edittext_bg"
        android:layout_marginTop="12dp" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description_tran"
        android:padding="12dp"
        android:background="@drawable/edittext_bg"
        android:layout_marginTop="12dp" />

    <Spinner
        android:id="@+id/spinnerType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/spinner_bg" />

    <Button
        android:id="@+id/btnAddTransaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_transaction_button"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/teal_700"
        android:textColor="@android:color/white"
        android:fontFamily="sans-serif-medium" />

</LinearLayout>
